Fixed spacing between sections in contact block

--- a/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
+++ b/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
@@ -1464,14 +1464,14 @@ form .preview {
   font-size: 1.4rem;
 }
 
-#block-tallgrasschurch-contact a {
-  color: inherit;
-}
-
 @media (min-width: 576px) {
   #block-tallgrasschurch-contact {
     padding: 40px 0;
   }
+}
+
+#block-tallgrasschurch-contact a {
+  color: inherit;
 }
 
 @media (min-width: 768px) {
@@ -1479,6 +1479,12 @@ form .preview {
     display: grid;
     grid-template-columns: repeat(12, [col] 1fr);
     grid-gap: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  #block-tallgrasschurch-contact .field--body section {
+    margin-bottom: 20px;
   }
 }
 
